<resources>
    <string name="app_name">ChillaxOwn</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">"Password "</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register
    </string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_task_label">Enter Task Label</string>
    <string name="enter_task_date">Enter Task Date</string>
    <string name="enter_task_time">Enter Task Time</string>
    <string name="add_task">Add Task</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmationText">Do you confirm to add the task?</string>
    <string name="select_label">Select Category</string>
    <string-array name="category_list">
        <item>Trip</item>
        <item>Study</item>
        <item>Chores</item>
        <item>Family</item>
        <item>Relaxation</item>
        <item>Urgent</item>
    </string-array>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="edit_task">Edit Task</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="facebook_app_id">1974141259378625</string>
</resources>
