<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AlertDialog.AppCompat.Light"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/liner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="AddActivity">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context="AddActivity">

                <ImageView
                    android:id="@+id/smallPic"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/realtime" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:hint="@string/enter_task_name"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context="AddActivity">

                <ImageView
                    android:id="@+id/ic_view_list"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/categories"/>

                <EditText
                    android:id="@+id/categoryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:ems="10"
                    android:editable="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_task_label"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context="AddActivity">

                <ImageView
                    android:id="@+id/ic_action_calendar_month"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/schedule" />

                <EditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:descendantFocusability="beforeDescendants"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:editable="false"
                    android:inputType="none"
                    android:hint="@string/enter_task_date"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context="com.example.william.mykid2advance.AddActivity">

                <ImageView
                    android:id="@+id/ic_timer"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sand_timer" />

                <EditText
                    android:id="@+id/timeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_task_time"
                    android:editable="false"
                    android:inputType="none"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/NoBtn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/design_default_color_primary"
                android:paddingTop="0dp"
                android:text="@string/set_reminder"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/completed"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/design_default_color_primary"
                android:paddingTop="0dp"
                android:text="Mark as Completed"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/family"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/design_default_color_primary"
                android:paddingTop="0dp"
                android:text="Share to family"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/facebook"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/design_default_color_primary"
                android:paddingTop="0dp"
                android:text="Share to Facebook"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>